fix title display

--- a/css/timeline.css
+++ b/css/timeline.css
@@ -10,6 +10,7 @@
 .timeline-items{
 	max-width: 1000px;
 	margin:auto;
+	margin-top: 50px;
 	display: flex;
 	flex-wrap: wrap;
 	position: relative;
