--- a/css/Customer.css
+++ b/css/Customer.css
@@ -4,7 +4,7 @@
     color: #f1f1f1;
 }
 
-.txt1 #programme {
+.txt1 .title-programme {
     text-align: center;
     color: #a970a7;
     font-size: 40px;
